Added images and link to Github

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 	</head>
 	<body>
 		<h1>Hello World</h1>
+        <footer>This project was coded by Aivy Nguyen and is open-sourced on <a href="https://github.com/aivy09/chamonix-project" target="_blank">Github</a></footer>
 	</body>
 </html>
