--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
 		<title>Chamonix</title>
 	</head>
 	<body>
-		<h1>Hello World</h1>
-        <footer>This project was coded by Aivy Nguyen and is open-sourced on <a href="https://github.com/aivy09/chamonix-project" target="_blank">Github</a></footer>
+		<div class="container">
+			<header>
+				<h3>AUGUST 2023</h3>
+				<h1>Chamonix</h1>
+				<h2>Home of the French Alps</h2>
+				<a href="#more">Learn More</a>
+			</header>
+
+			<footer>
+				This project was coded by Aivy Nguyen and is open-sourced on
+				<a href="https://github.com/aivy09/chamonix-project" target="_blank"
+					>Github</a
+				>
+			</footer>
+		</div>
 	</body>
 </html>
