--- a/index.html
+++ b/index.html
@@ -21,10 +21,37 @@
 			</header>
 
 			<footer>
-				This project was coded by Aivy Nguyen and is open-sourced on
-				<a href="https://github.com/aivy09/chamonix-project" target="_blank"
-					>Github</a
-				>
+                <section class="grid">
+				<div>
+					<h3>More about Chamonix</h3>
+
+					<ul>
+						<li><a href="https://www.meteoblue.com/en/weather/week/chamonix_france_3027301" target="_blank">Chamonix Weather</a></li>
+						<li><a href="https://www.chamonix.net/english/maps/chamonix-town" target="_blank">Maps of Chamonix</a></li>
+						<li><a href="https://www.chamonix.net/english/transport" target="_blank">Public Transportation Info</a></li>
+					</ul>
+				</div>
+				<div>
+					<h3>About me</h3>
+					<p>
+						Hi! My name is Aivy Nguyen. I travelled to Chamonix, France in
+						August of 2023 while stil on a year sabbtical. I spent two weeks in
+						the city predominately alpine rock climbing, trail running, and
+						eating a lot of French food.
+					</p>
+				</div>
+				<div>
+					<p>
+						I created this page as part of a project for SheCodes Responsive to
+						develop my coding skills.
+						<br />
+						This project is open-sourced on
+						<a href="https://github.com/aivy09/chamonix-project" target="_blank"
+							>Github</a
+						>
+					</p>
+				</div>
+                </section>
 			</footer>
 		</div>
 	</body>
