--- a/index.html
+++ b/index.html
@@ -20,38 +20,72 @@
 				<a href="#more">Learn More</a>
 			</header>
 
-			<footer>
-                <section class="grid">
-				<div>
-					<h3>More about Chamonix</h3>
+			<main>
+				<section class="grid grid-2-columns">
+                    <div>
+					<img src="images/baguette.jpg" alt="Baguette" class="img-responsive"/>
+                    </div>
+                    <div>
+                    <h2>Why Chamonix</h2>
+					<h3>Chamonix is home of the French alps.</h3>
+					<p>blah blah blah blah</p>
+                    </div>
+				</section>
+			</main>
 
-					<ul>
-						<li><a href="https://www.meteoblue.com/en/weather/week/chamonix_france_3027301" target="_blank">Chamonix Weather</a></li>
-						<li><a href="https://www.chamonix.net/english/maps/chamonix-town" target="_blank">Maps of Chamonix</a></li>
-						<li><a href="https://www.chamonix.net/english/transport" target="_blank">Public Transportation Info</a></li>
-					</ul>
-				</div>
-				<div>
-					<h3>About me</h3>
-					<p>
-						Hi! My name is Aivy Nguyen. I travelled to Chamonix, France in
-						August of 2023 while stil on a year sabbtical. I spent two weeks in
-						the city predominately alpine rock climbing, trail running, and
-						eating a lot of French food.
-					</p>
-				</div>
-				<div>
-					<p>
-						I created this page as part of a project for SheCodes Responsive to
-						develop my coding skills.
-						<br />
-						This project is open-sourced on
-						<a href="https://github.com/aivy09/chamonix-project" target="_blank"
-							>Github</a
-						>
-					</p>
-				</div>
-                </section>
+			<footer>
+				<section class="grid grid-3-columns">
+					<div>
+						<h3>More about Chamonix</h3>
+
+						<ul>
+							<li>
+								<a
+									href="https://www.meteoblue.com/en/weather/week/chamonix_france_3027301"
+									target="_blank"
+									>Chamonix Weather</a
+								>
+							</li>
+							<li>
+								<a
+									href="https://www.chamonix.net/english/maps/chamonix-town"
+									target="_blank"
+									>Maps of Chamonix</a
+								>
+							</li>
+							<li>
+								<a
+									href="https://www.chamonix.net/english/transport"
+									target="_blank"
+									>Public Transportation Info</a
+								>
+							</li>
+						</ul>
+					</div>
+					<div>
+						<h3>About Me</h3>
+						<p>
+							Hi! My name is Aivy Nguyen. I travelled to Chamonix, France in
+							August of 2023 while stil on a year sabbtical. I spent two weeks
+							in the city predominately alpine rock climbing, trail running, and
+							eating a lot of French food.
+						</p>
+					</div>
+					<div>
+						<h3>About this Website</h3>
+						<p>
+							I created this page as part of a project for SheCodes Responsive
+							to develop my coding skills.
+							<br />
+							This project is open-sourced on
+							<a
+								href="https://github.com/aivy09/chamonix-project"
+								target="_blank"
+								>Github</a
+							>
+						</p>
+					</div>
+				</section>
 			</footer>
 		</div>
 	</body>
