--- a/index.html
+++ b/index.html
@@ -22,14 +22,30 @@
 
 			<main>
 				<section class="grid grid-2-columns">
-                    <div>
-					<img src="images/baguette.jpg" alt="Baguette" class="img-responsive"/>
-                    </div>
-                    <div>
-                    <h2>Why Chamonix</h2>
-					<h3>Chamonix is home of the French alps.</h3>
-					<p>blah blah blah blah</p>
-                    </div>
+					<div>
+						<img
+							src="images/baguette.jpg"
+							alt="Baguette"
+							class="img-responsive" />
+					</div>
+					<div>
+						<h2>Why Chamonix?</h2>
+						<h3>An Outdoor Enthusiast's Dream</h3>
+						<p>
+							From skiing to hiking to enjoying gorgeous views of the Alps,
+							there’s something for everyone in Chamonix, France.
+							<br>
+                            <br>
+                            In the summer you can hike from mountain hut to mountain hut, take
+							in the soaring views from atop some of France’s highest peaks, and
+							easily day trip to Switzerland or France. In the winter you can
+							ride trams, gondolas, or chairlifts to some of the best skiing in
+							the world, adventure into the backcountry, and access a dozen
+							different ski areas on one pass. And all year round, you have
+							access to a town full of world-class dining, shopping, and
+							nightlife.
+						</p>
+					</div>
 				</section>
 			</main>
 
