--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 						<p>
 							From skiing to hiking to enjoying gorgeous views of the Alps,
 							there’s something for everyone in Chamonix, France.
-							<br>
-                            <br>
-                            In the summer you can hike from mountain hut to mountain hut, take
+							<br />
+							<br />
+							In the summer you can hike from mountain hut to mountain hut, take
 							in the soaring views from atop some of France’s highest peaks, and
 							easily day trip to Switzerland or France. In the winter you can
 							ride trams, gondolas, or chairlifts to some of the best skiing in
@@ -47,10 +47,97 @@
 						</p>
 					</div>
 				</section>
+				<section class="secondary">
+					<h3>Places in Chamonix</h3>
+
+					<div class="grid grid-3-columns">
+						<div class="card">
+							<div class="card-header">
+								<img
+									src="images/aiguille-du-midi.jpg"
+									alt=""
+									class="img-responsive" />
+							</div>
+
+							<div class="card-body">
+								<h4>Aiguille du Midi</h4>
+								<p>
+									Aiguille du Midi is a mountain peak in the Mont Blanc massif.
+									It is 3,842 meters (12,605 feet) tall. A cable car to the
+									summit was first constructed in 1955, and it held the record
+									for the highest cable car in the world for about 20 years.
+								</p>
+								<h5>Address</h5>
+								<p>74400, Chamonix, France</p>
+							</div>
+							<div class="card-footer">
+								<a
+									href="https://www.earthtrekkers.com/aiguille-du-midi-panoramic-mont-blanc/"
+									class="btn"
+									target="_blank"
+									>Learn More</a
+								>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-header">
+								<img src="images/ibex.jpg" alt="" class="img-responsive" />
+							</div>
+
+							<div class="card-body">
+								<h4>Parc de Merlet</h4>
+								<p>
+									Come and watch the mountain animals roam freely in this animal
+									park in a magical setting, at an altitude of 1500m, just
+									opposite Mont Blanc.
+									<br />
+									<br />
+									Species to discover: ibex, sika deer, llama, mouflon, marmot,
+									chamois and fallow deer!
+								</p>
+								<h5>Address</h5>
+								<p>2495 Chem De Merlet, 74310 Les Houches</p>
+							</div>
+							<div class="card-footer">
+								<a
+									href="https://www.parcdemerlet.com/"
+									class="btn"
+									target="_blank"
+									>Learn More</a
+								>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-header">
+								<img src="images/moody.jpg" alt="" class="img-responsive" />
+							</div>
+
+							<div class="card-body">
+								<h4>Moody Coffee Roasters</h4>
+								<p>
+									In need of coffee, pastries or both? Moody Coffee Roasters is
+									one of the highly-rated places for coffee and pasteries in
+									Chamonix.
+								</p>
+
+								<h5>Address</h5>
+								<p>
+									195 Avenue de l'Aiguille du Midi Chamonix-Mont-Blanc 74400
+									France
+								</p>
+							</div>
+							<div class="card-footer">
+								<a href="https://cafesmoody.com/" class="btn" target="_blank"
+									>Learn More</a
+								>
+							</div>
+						</div>
+					</div>
+				</section>
 			</main>
 
 			<footer>
-				<section class="grid grid-3-columns">
+				<section class="grid grid-3-columns-with-first-narrow">
 					<div>
 						<h3>More about Chamonix</h3>
 
@@ -92,6 +179,7 @@
 						<p>
 							I created this page as part of a project for SheCodes Responsive
 							to develop my coding skills.
+							<br />
 							<br />
 							This project is open-sourced on
 							<a
