Added google maps embed

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 					<div class="grid grid-3-columns">
 						<div class="card">
-							<div class="card-header">
+							<div class="card-header grid grid-2-columns">
 								<img
 									src="images/aiguille-du-midi.jpg"
 									alt=""
@@ -69,6 +69,13 @@
 								</p>
 								<h5>Address</h5>
 								<p>74400, Chamonix, France</p>
+								<iframe
+									src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22220.803150315274!2d6.8484557989585975!3d45.8793039272219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47894f1a8a153625%3A0x8814601674c66bfc!2sAiguille%20du%20Midi!5e0!3m2!1sen!2sus!4v1711072786540!5m2!1sen!2sus"
+									class="embed"
+									style="border: 0"
+									allowfullscreen=""
+									loading="lazy"
+									referrerpolicy="no-referrer-when-downgrade"></iframe>
 							</div>
 							<div class="card-footer">
 								<a
@@ -97,6 +104,13 @@
 								</p>
 								<h5>Address</h5>
 								<p>2495 Chem De Merlet, 74310 Les Houches</p>
+								<iframe
+									src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2776.1971366756434!2d6.816123476185417!3d45.90736827108465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478951c11a0da609%3A0xfb302e58668d8476!2sParc%20de%20Merlet!5e0!3m2!1sen!2sus!4v1711073425498!5m2!1sen!2sus"
+									class="embed"
+									style="border: 0"
+									allowfullscreen=""
+									loading="lazy"
+									referrerpolicy="no-referrer-when-downgrade"></iframe>
 							</div>
 							<div class="card-footer">
 								<a
@@ -125,6 +139,13 @@
 									195 Avenue de l'Aiguille du Midi Chamonix-Mont-Blanc 74400
 									France
 								</p>
+								<iframe
+									src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2775.5845141880336!2d6.864189287041003!3d45.91961619652996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47894e710c2fed3d%3A0xc575ce5e2d4bdc30!2sMoody%20Coffee%20Roasters!5e0!3m2!1sen!2sus!4v1711073483780!5m2!1sen!2sus"
+									class="embed"
+									style="border: 0"
+									allowfullscreen=""
+									loading="lazy"
+									referrerpolicy="no-referrer-when-downgrade"></iframe>
 							</div>
 							<div class="card-footer">
 								<a href="https://cafesmoody.com/" class="btn" target="_blank"
