--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 					</div>
 				</section>
 				<section class="secondary">
+                    <h2>Attractions</h2>
 					<h3>Places in Chamonix</h3>
 
 					<div class="grid grid-3-columns">
@@ -153,6 +154,17 @@
 								>
 							</div>
 						</div>
+					</div>
+				</section>
+
+				<section>
+					<h2>Gallery</h2>
+					<h3>My Photos from Chamonix</h3>
+
+					<div class="grid grid-3-columns photos">
+						<img src="images/view.jpg" alt="" class="img-responsive" />
+						<img src="images/mont-blanc.jpg" alt="" class="img-responsive" />
+						<img src="images/refugio.jpg" alt="" class="img-responsive" />
 					</div>
 				</section>
 			</main>
